[package]
name = "sgx-cpu"
version = "0.1.2"
authors = ["Thibs G <thibsg@pm.me>"]
edition = "2018"
description = "sgx-cpu provides useful information about SGX support by your current CPU"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ThibsG/sgx-cpu"
keywords = ["sgx-cpu", "sgx", "cpu", "cpuid", "intel"]

[[bin]]
path = "src/main.rs"
name = "sgx-cpu"

[dependencies]
raw-cpuid = "9"
structopt = "0.3"
console = "0.14"
